Agregar hoja de estilos.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta name="description" content="Ejemplo de HTML5" />
         <meta name="keywords" content="HTML5,CSS3,JavaScript" />
         <title>Organizacion</title>
+        <link rel="stylesheet" href="estilo.css"/>
     </head>
     <body>
         <header>
